--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -1,20 +1,20 @@
-
 name: Go
 
 on:
   push:
-    branches: [ "main", "dev"]
+    branches:
+      - main
+      - dev
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
+      - name: Set up Go
+        uses: actions/setup-go@v4
 
-    - name: Test
-      run: go test -v .\tests\
-      continue-on-error: false
+      - name: Test
+        run: go test -v .\tests\
+        continue-on-error: false
