--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -10,11 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
+      - uses: actions/setup-go@v4
       - name: Set up Go
-        uses: actions/setup-go@v4
-
-      - name: Test
+        
+      - name: Run tests
         run: go test -v .\tests\
         continue-on-error: false
