--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -1,18 +1,23 @@
+
 name: Go
 
 on:
   push:
-    branches:
-      - main
-      - dev
+    branches: [ "main", "dev"]
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v4
-      - name: Set up Go
-        
-      - name: Run tests
-        run: go test -v .\tests\
-        continue-on-error: false
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v4
+      with:
+        go-version: 1.22.1
+
+    - name: Run tests
+      run: go test -v .\tests\
+      continue-on-error: false
