--- a/.github/workflows/test-go.yml
+++ b/.github/workflows/test-go.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v4
 
     - name: Run tests
-      run: go test -v .\tests\
+      run: go test -v ./tests/
       continue-on-error: false
